--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "eslint": "^9.30.1",
     "ts-node-dev": "^2.0.0",
@@ -24,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "zod": "^3.25.75"
