--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node ./dist/app.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "lint": "npx eslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,16 +27,16 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/pdfkit": "^0.17.3",
+    "@types/multer": "^2.0.0",
     "eslint": "^9.30.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
-    "@types/multer": "^2.0.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
